--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,14 @@
 
-
 .container {
   margin: 0 auto;
-  max-width: 300px;
-  padding-top:65px;
+  max-width: 500px;
+  padding-top: 65px;
 }
+
+/deep/ .auth-modal .modal-body {
+  min-width: 300px;
+       }
+
 
 label {
   width: 100px;
@@ -12,7 +16,7 @@ label {
 }
 
 .form-row {
-  width:500px;
+  width: 500px;
   margin-bottom: 10px;
 }
 
@@ -20,17 +24,14 @@ label {
   margin-bottom: 5px;
 }
 
-.form-field input {
-
-}
 
 
-input {
-  height: 25px;
+input /deep/ {
+  max-width: 120px;
 }
 
 .normal-input {
-  width:150px;
+  width: 150px;
 }
 
 h1 {
@@ -39,9 +40,9 @@ h1 {
   margin-top: 50px;
 }
 
-
 .modal-buttons {
   margin-top: 20px;
+  margin-left: 50px;
 }
 
 
