--- a/src/app/au-modal/au-modal.component.html
+++ b/src/app/au-modal/au-modal.component.html
@@ -1,3 +1,7 @@
-<p>
-  au-modal works!
-</p>
+<div class="modal-overlay">
+
+  <div class="modal-body">
+    <ng-content></ng-content>
+  </div>
+
+</div>
