--- a/src/app/au-modal/au-modal.component.scss
+++ b/src/app/au-modal/au-modal.component.scss
@@ -1,15 +1,12 @@
 
-$secondary: rgba(0, 0, 0, 0.117647);
-
-
-
 .modal-body {
   position: absolute;
+  display: inline-block;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 20;
-  $border: 1px solid $secondary;
+  $border: 1px solid rgba(0, 0, 0, 0.117647);
   border:$border;
   border-radius: 4px;
   background: white;
@@ -28,4 +25,16 @@ $secondary: rgba(0, 0, 0, 0.117647);
   z-index: 10;
 }
 
+:host .close-icon {
+  width: 100%;
+  height: 20px;
+}
 
+:host .close-icon /deep/ i  {
+  cursor: pointer;
+  position: fixed;
+  right: 5px;
+  top: 5px;
+  height: 15px;
+
+}
