--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,7 @@
 
   <h1>Modal Examples</h1>
 
-
-
-
-  <au-modal class="auth-modal">
+  <ng-template #newModelBody>
     <au-tab-panel>
       <au-tab title="Login">
         <form>
@@ -64,6 +61,11 @@
         </form>
       </au-tab>
     </au-tab-panel>
+  </ng-template>
+
+
+  <au-modal class="auth-modal" [body]="newModelBody">
+    <h1>projection</h1>
   </au-modal>
 
 
