--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,11 +64,50 @@
   </ng-template>
 
 
-  <au-modal class="auth-modal" [body]="newModelBody">
-    <h1>projection</h1>
-  </au-modal>
-
-
+  <ng-template [auModalOpenOnClick]="[loginButton, signUpButton]">
+    <au-modal class="auth-modal" [body]="newModelBody">
+      <au-tab-panel>
+        <au-tab title="Login">
+          <form>
+            <div class="form-field">
+              <au-fa-input id="email-field" icon="envelope">
+                <input auInput type="email" name="email"
+                       placeholder="Email" autocomplete="off">
+              </au-fa-input>
+            </div>
+            <div class="form-field">
+              <au-fa-input icon="lock">
+                <input auInput type="password" name="email"
+                       placeholder="Password" autocomplete="off">
+              </au-fa-input>
+            </div>
+          </form>
+        </au-tab>
+        <au-tab title="Sign Up">
+          <form>
+            <div class="form-field">
+              <au-fa-input icon="envelope">
+                <input auInput type="email" name="email"
+                       placeholder="Email" autocomplete="off">
+              </au-fa-input>
+            </div>
+            <div class="form-field">
+              <au-fa-input icon="lock">
+                <input auInput type="password" name="email"
+                       placeholder="Password" autocomplete="off">
+              </au-fa-input>
+            </div>
+            <div class="form-field">
+              <au-fa-input icon="lock">
+                <input auInput type="password" name="email"
+                       placeholder="Confirm Password" autocomplete="off">
+              </au-fa-input>
+            </div>
+          </form>
+        </au-tab>
+      </au-tab-panel>
+    </au-modal>
+  </ng-template>
 
   <div class="modal-buttons">
 
