--- a/src/app/au-modal/au-modal.component.html
+++ b/src/app/au-modal/au-modal.component.html
@@ -2,6 +2,10 @@
 
   <div class="modal-body" (click)="cancelCloseModal($event)">
 
+    <div class="close-icon">
+      <ng-content select="i"></ng-content>
+    </div>
+
     <ng-container *ngIf="body; else projectionBody">
       <ng-container *ngTemplateOutlet="body"></ng-container>
     </ng-container>
