ng-template inputs

--- a/src/app/au-modal/au-modal.component.html
+++ b/src/app/au-modal/au-modal.component.html
@@ -7,7 +7,7 @@
     </div>
 
     <ng-container *ngIf="body; else projectionBody">
-      <ng-container *ngTemplateOutlet="body"></ng-container>
+      <ng-container *ngTemplateOutlet="body; context:context" ></ng-container>
     </ng-container>
 
     <ng-template #projectionBody>
