--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,10 @@
 
   <h1>Modal Examples</h1>
 
-  <ng-template #newModelBody>
+  <ng-template #newModelBody let-title="title" let-tabActivated="loginTabActivated">
+    <h2>{{title}}</h2>
     <au-tab-panel>
-      <au-tab title="Login">
+      <au-tab title="Login" [selected]="tabActivated">
         <form>
           <div class="form-field">
             <au-fa-input id="email-field" icon="envelope">
@@ -38,7 +39,7 @@
           </div>
         </form>
       </au-tab>
-      <au-tab title="Sign Up">
+      <au-tab title="Sign Up" [selected]="!tabActivated">
         <form>
           <div class="form-field">
             <au-fa-input icon="envelope">
@@ -70,10 +71,12 @@
     *auModalOpenOnClick="[loginButton, signUpButton]"
     [closeOnClickOutside]="true"
     [closeOnEsc]="true"
+    [context]="{title: 'Login or Sign up', loginTabActivated: loginTabActivated}"
     [body]="newModelBody">
     <i class="fa fa-times" (click)="modal.close()"></i>
     <au-tab-panel>
-      <au-tab title="Login">
+
+      <au-tab title="Login" [selected]="loginTabActivated">
         <form>
           <div class="form-field">
             <au-fa-input id="email-field" icon="envelope">
@@ -89,7 +92,7 @@
           </div>
         </form>
       </au-tab>
-      <au-tab title="Sign Up">
+      <au-tab title="Sign Up" [selected]="!loginTabActivated">
         <form>
           <div class="form-field">
             <au-fa-input icon="envelope">
@@ -117,9 +120,9 @@
 
   <div class="modal-buttons">
 
-    <button #loginButton>Login</button>
+    <button #loginButton (click)="setLoginTabActive(true)">Login</button>
 
-    <button #signUpButton>Sign Up</button>
+    <button #signUpButton (click)="setLoginTabActive(false)">Sign Up</button>
 
   </div>
 
